--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -5,7 +5,7 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
-  workflow_dispatch:  # Manual trigger ekledik
+  workflow_dispatch:
 
 env:
   NODE_VERSION: '18'
@@ -38,16 +38,12 @@ jobs:
           cache: 'npm'
 
       - name: Install dependencies
-        run: |
-          cd src/backend
-          npm ci
+        run: npm ci
         env:
           NODE_ENV: test
 
       - name: Run tests
-        run: |
-          cd src/backend
-          npm test
+        run: npm test
         env:
           NODE_ENV: test
           JWT_SECRET: test-secret-key
@@ -71,16 +67,12 @@ jobs:
           cache: 'npm'
 
       - name: Install dependencies
-        run: |
-          cd src/backend
-          npm ci
+        run: npm ci
         env:
           NODE_ENV: production
 
       - name: Build application
-        run: |
-          cd src/backend
-          npm run build
+        run: npm run build
         env:
           NODE_ENV: production
 
@@ -109,9 +101,7 @@ jobs:
           RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
 
       - name: Deploy to Railway
-        run: |
-          cd src/backend
-          railway up
+        run: railway up
         env:
           RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
           RAILWAY_PROJECT_ID: ${{ secrets.RAILWAY_PROJECT_ID }}
@@ -123,4 +113,4 @@ jobs:
 
       - name: Show deployment success
         if: success()
-        run: echo "✅ Deployment to Railway successful!" 
+        run: echo "✅ Deployment to Railway successful!"
