--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -96,8 +96,7 @@ jobs:
         run: npm install -g @railway/cli
 
       - name: Deploy to Railway
-        run: |
-          railway up --service a2d6a248-eefd-4500-b1bd-56debd7be372 --token ${{ secrets.RAILWAY_TOKEN }}
+        run: railway up --service a2d6a248-eefd-4500-b1bd-56debd7be372 -- --token 255f36d0-835e-4648-9db1-068fff83db00
         env:
           RAILWAY_PROJECT_ID: ${{ secrets.RAILWAY_PROJECT_ID }}
           RAILWAY_ENVIRONMENT: production
